name:                hlbfgsb
version:             0.1.0.0
synopsis:            Haskell binding to L-BFGS-B version 3.0
-- description:
homepage:            https://people.ksp.sk/~ivan/hlbfgsb
-- license:
license-file:        LICENSE
author:              Ivan Labáth
maintainer:          ivan@hlbfgsb.ksp.sk
-- copyright:
category:            Math
build-type:          Custom
cabal-version:       >=1.10

extra-source-files:
    Config/Build.hs,
    Config/Exception.hs,
    Config/GHC.hs,
    Config/Program.hs,
    Config/Simple.hs,
    src/blas.f,
    src/lbfgsb.f,
    src/linpack.f,
    src/timer.f

library
  exposed-modules:     Numeric.Lbfgsb
  -- other-modules:
  default-language: Haskell2010
  build-depends: base,
                 vector >= 0.9
  hs-source-dirs: src
  extra-libraries: gfortran
  x-fortran-sources: src/blas.f,
                     src/lbfgsb.f,
                     src/linpack.f,
                     src/timer.f

test-suite test
    type:       exitcode-stdio-1.0
    main-is:    Tests.hs
    default-language: Haskell2010
    build-depends: base,
                   vector >= 0.9,
                   hlbfgsb,
                   HUnit
    hs-source-dirs: test
