name:                hlbfgsb
version:             0.1.0.0
synopsis:            Haskell binding to L-BFGS-B version 3.0
description:
    Haskell bindings to Nocedal's 3.0 version
    of the Limited memory - Broyden Fletcher Goldfarb Shanno - Bounded
    optimization algorithm.
    .
    From homepage:
    Software for Large-scale Bound-constrained Optimization L-BFGS-B is a
    limited-memory quasi-Newton code for bound-constrained optimization, i.e.
    for problems where the only constraints are of the form l <= x <= u. The
    current release is version 3.0. The distribution file was last changed on
    2011-08-02.

homepage:            http://people.ksp.sk/~ivan/hlbfgsb
license:	     BSD3
license-file:        LICENSE
author:              Ivan Labáth
maintainer:          ivan@hlbfgsb.ksp.sk
-- copyright:
category:            Math
build-type:          Custom
cabal-version:       >=1.10

extra-source-files:
    Config/Build.hs,
    Config/Exception.hs,
    Config/GHC.hs,
    Config/Program.hs,
    Config/Simple.hs,
    src/blas.f,
    src/lbfgsb.f,
    src/linpack.f,
    lbfgsb.html

library
  exposed-modules:     Numeric.Lbfgsb
  -- other-modules:
  default-language: Haskell2010
  build-depends: base >= 4 && < 5,
                 vector >= 0.9
  hs-source-dirs: src
  extra-libraries: gfortran
  x-fortran-sources: src/blas.f,
                     src/lbfgsb.f,
                     src/linpack.f

test-suite test
    type:       exitcode-stdio-1.0
    main-is:    Tests.hs
    default-language: Haskell2010
    build-depends: base >= 4 && < 5,
                   vector >= 0.9,
                   hlbfgsb,
                   HUnit,
                   test-framework,
                   test-framework-hunit
    hs-source-dirs: test

source-repository head
  type:     darcs
  location: http://people.ksp.sk/~ivan/hlbfgsb

source-repository this
  type:     darcs
  location: http://people.ksp.sk/~ivan/hlbfgsb
  tag:      0.1.0.0
